# gap_tributario_gfis2

./: .gitignore  README.md  pyproject.toml
config/: aliquotas.yaml
mdic_comex/: Documentação da Solução ETL para Dados de Comércio Exterior do MDIC.md  mdic_comex.py  mdic_comex_config.json  mdic_comex_dag.py
src/gap_tributario/: __init__.py  __main__.py  cli.py  config.py  models.py
src/gap_tributario/engine/: __init__.py  vrr.py
src/gap_tributario/extractors/: __init__.py  arrecadacao.py  base.py  comex.py  ibge.py  ptax.py  siscomex.py
src/gap_tributario/report/: __init__.py  excel.py  pdf.py
src/gap_tributario/validators/: __init__.py  schemas.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_integration.py  test_models.py
tests/fixtures/api_responses/: bcb_ptax_2022.json  ibge_sidra_5938_2022.json
tests/fixtures/config/: aliquotas_test.yaml
tests/fixtures/csv/: EXP_2022.csv  IMP_2022.csv
tests/fixtures/parquet/: arrecadacao_fixture.parquet
tests/test_engine/: __init__.py  test_vrr.py
tests/test_extractors/: __init__.py  test_arrecadacao.py  test_comex.py  test_ibge.py  test_ptax.py  test_siscomex.py
tests/test_report/: __init__.py  test_excel.py  test_pdf.py
tests/test_validators/: __init__.py  test_schemas.py
