[project]
name = "gap-tributario"
version = "0.1.0"
description = "Calculadora de Gap Tributário do ICMS-MA usando metodologia VRR (OCDE)"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "SEFAZ-MA", email = "ti@sefaz.ma.gov.br" },
]
keywords = ["icms", "gap tributario", "vrr", "ocde", "sefaz"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "polars>=0.20.0",
    "pandera>=0.18.0",
    "reportlab>=4.0.0",
    "xlsxwriter>=3.1.0",
    "requests>=2.31.0",
    "sidrapy>=0.1.4",
    "httpx>=0.26.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
oracle = [
    "oracledb>=2.0.0",
]

[project.scripts]
gap-tributario = "gap_tributario.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gap_tributario"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py38"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in default arguments
    "UP007", # use X | Y for type annotations (Python 3.8 compat)
    "UP006", # use lowercase for type annotations (Python 3.8 compat)
    "UP045", # use X | None (Python 3.10+ syntax — manter Optional para Python 3.8 compat)
    "UP035", # use import from (deprecated imports)
    "UP037", # remove quotes from type annotations (mantemos quotes em TYPE_CHECKING blocks)
]

[tool.ruff.lint.isort]
known-first-party = ["gap_tributario"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/gap_tributario"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
